--- a/.github/workflows/inventory_sync.yml
+++ b/.github/workflows/inventory_sync.yml
@@ -37,7 +37,7 @@ jobs:
           EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
-        run: python inventory_master_sync.py
+        run: python -u inventory_master_sync.py
 
       - name: Commit and Push Blacklist Updates
         run: |
