--- a/.github/workflows/inventory_sync.yml
+++ b/.github/workflows/inventory_sync.yml
@@ -1,8 +1,8 @@
 name: Inventory Sync
 
 on:
-  schedule:
-    - cron: '0 8 * * *' # Runs daily at 8am UTC
+  # schedule:
+    # - cron: '0 8 * * *' # Runs daily at 8am UTC
   workflow_dispatch:      # Allows manual trigger button
 
 permissions:
